--- a/src/aura/ProjectTile/ProjectTile.cmp
+++ b/src/aura/ProjectTile/ProjectTile.cmp
@@ -3,7 +3,8 @@
 
         <lightning:tile href="#">
           <section id="accordion">
-          		<div>
+            <div class="slds-grid slds-gutters">
+              <div class="slds-col slds-size_2-of-4" id="tiles">
           			<input type="radio"  name="accordion-role" id="{!v.Project.Id}" />
           			<label class="slds-text-align_center slds-text-heading_medium"
                         for="{!v.Project.Id}">{!v.Project.Name}</label>
@@ -13,6 +14,10 @@
                              </div>
           			    	</article>
           			</div>
+                <div class="slds-col slds-size_2-of-4">
+                   <c:TestCaseForm project="{!v.Project}" />
+                </div>
+                </div>
         </section>
       </lightning:tile>
 
