--- a/src/aura/ProjectTile/ProjectTile.css
+++ b/src/aura/ProjectTile/ProjectTile.css
@@ -1,7 +1,7 @@
-.THIS #accordion input {
+.THIS #accordion #tiles input {
 	display: none;
 }
-.THIS #accordion label {
+.THIS #accordion #tiles label {
 	background: #f7f9fb;
 	border-radius: 4px;
 	cursor: pointer;
@@ -12,24 +12,24 @@
     border:1px solid #eef2f6;
 }
 
-.THIS #accordion label:hover {
+.THIS #accordion #tiles label:hover {
 	background: #eef2f6;
 }
 
-.THIS #accordion input:checked + label {
+.THIS #accordion #tiles input:checked + label {
 	background: #eef2f6;
 	border-bottom-right-radius: 0;
 	border-bottom-left-radius: 0;
 	color: black;
 	margin-bottom: 0;
 }
-.THIS #accordion article {
+.THIS #accordion #tiles article {
 	background: white;
 	height:0px;
 	overflow:hidden;
 	z-index:10;
 }
-.THIS #accordion input:checked ~ article {
+.THIS #accordion #tiles input:checked ~ article {
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 	height: auto;
