UPDATED: PART 3 DONE

--- a/src/aura/TestCaseForm/TestCaseForm.cmp
+++ b/src/aura/TestCaseForm/TestCaseForm.cmp
@@ -3,6 +3,7 @@
                                                                'Name': '',
                                                                'Title__c': '',
                                                                'User_story__c': '',
+                                                               'unknown_custom_field':'',
                                                                'Project__c': '',
                                                                'Preconditions__c': '',
                                                                'Description__c': '' }"/>
